--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
 async-timeout==4.0.3
 attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
+distro==1.9.0
 frozenlist==1.4.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.4
 multidict==6.0.4
-openai==0.27.9
+openai==1.37.1
+pydantic==2.8.2
+pydantic_core==2.20.1
 pydub==0.25.1
 python-dotenv==1.0.0
 pytube==15.0.0
 requests==2.31.0
+sniffio==1.3.1
 tqdm==4.66.1
+typing_extensions==4.12.2
 urllib3==2.0.4
 yarl==1.9.2
